# plugins

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README  README.md  variables.cmake
deprecated/gmailserviceplugin/: CMakeLists.txt  accountsettings.cpp  accountsettings.h  actionslist.cpp  actionslist.h  changelog.txt  common.cpp  common.h  gmailserviceplugin.cpp  gmailserviceplugin.h  gmailserviceplugin.pro  gmailserviceplugin.qrc  options.ui  viewmaildlg.cpp  viewmaildlg.h  viewmaildlg.ui
deprecated/gnome3supportplugin/: CMakeLists.txt  gnome3supportplugin.cpp  resources.qrc
dev/: CMakeLists.txt
dev/battleshipgameplugin/: CMakeLists.txt  battleshipgameplugin.cpp  battleshipgameplugin.h  battleshipgameplugin.pro  battleshipgameplugin.qrc  boarddelegate.cpp  boarddelegate.h  boardmodel.cpp  boardmodel.h  boardview.cpp  boardview.h  changelog.txt  gamemodel.cpp  gamemodel.h  gamesessions.cpp  gamesessions.h  invitationdialog.ui  invitedialog.cpp  invitedialog.h  invitedialog.ui  options.cpp  options.h  options.ui  pluginwindow.cpp  pluginwindow.h  pluginwindow.ui  psiplugin.json
dev/enummessagesplugin/: changelog.txt  defines.h  enummessagesplugin.cpp  enummessagesplugin.h  enummessagesplugin.pro
dev/gnupgplugin/: addkeydlg.cpp  changelog.txt  gnupg.cpp  gnupgplugin.pro  gpgprocess.cpp  model.cpp  model.h
dev/messagefilterplugin/: messagefilter.cpp  messagefilter.h  options.cpp  options.h
dev/noughtsandcrossesplugin/: CMakeLists.txt  noughtsandcrossesplugin.cpp  psiplugin.json  tictac.cpp  tictac.h
dev/omemoplugin/: CMakeLists.txt  changelog.txt  libsignal.pri  omemoplugin.pro
dev/otrplugin/: README  otrplugin.pro  otrplugin.qrc  psi-otr.qrc
dev/pstoplugin/: changelog.txt  preferenceswidget.cpp  preferenceswidget.h  pstoplugin.cpp  pstoplugin.h  pstoplugin.pro
dev/redirectorplugin/: CMakeLists.txt  options.ui  psiplugin.json  redirectorplugin.cpp  redirectorplugin.h  redirectorplugin.pro  redirectplugin.cpp  redirectplugin.h
dev/ripperccplugin/: CMakeLists.txt  qjsonwrapper.cpp  qjsonwrapper.h  resources.qrc  rippercc.cpp  rippercc.h  ripperccoptions.cpp  ripperccoptions.h  ripperccoptions.ui  ripperccplugin.pro
generic/: CMakeLists.txt  generic.pro
generic/attentionplugin/: CMakeLists.txt  attentionplugin.cpp  attentionplugin.pro  attentionplugin.qrc  changelog.txt  options.ui  psiplugin.json
generic/autoreplyplugin/: CMakeLists.txt  autoreplyplugin.cpp  autoreplyplugin.pro  changelog.txt  psiplugin.json  resources.qrc
generic/birthdayreminderplugin/: CMakeLists.txt  birthdayreminderplugin.cpp  birthdayreminderplugin.pro  birthdayreminderplugin.qrc  changelog.txt  options.ui  psiplugin.json
generic/captchaformsplugin/: CMakeLists.txt  captchadialog.cpp  captchadialog.h  captchaformsplugin.cpp  captchaformsplugin.pro  changelog.txt  loader.cpp  loader.h  options.ui  resources.qrc
generic/chessplugin/: CMakeLists.txt  boarddelegate.cpp  boarddelegate.h  boardmodel.cpp  boardmodel.h  boardview.cpp  boardview.h  changelog.txt  chessplugin.cpp  chessplugin.pro  chessplugin.qrc  figure.cpp  figure.h  invitationdialog.ui  invitedialog.cpp  invitedialog.h  invitedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.ui  psiplugin.json  request.h
generic/cleanerplugin/: CMakeLists.txt  changelog.txt  cleaner.cpp  cleaner.h  cleaner.ui  cleanerplugin.cpp  cleanerplugin.h  cleanerplugin.pro  cleanerplugin.qrc  clearingtab.ui  common.cpp  common.h  default.xml  models.cpp  models.h  optionsparser.cpp  optionsparser.h  psiplugin.json  viewers.cpp  viewers.h
generic/clientswitcherplugin/: CMakeLists.txt  accountsettings.cpp  accountsettings.h  changelog.txt  clientswitcherplugin.cpp  clientswitcherplugin.h  clientswitcherplugin.pro  clientswitcherplugin.qc  options.ui  psiplugin.json  resources.qrc  typeaheadfind.cpp  typeaheadfind.h  viewer.cpp  viewer.h
generic/conferenceloggerplugin/: CMakeLists.txt  changelog.txt  conferenceloggerplugin.cpp  conferenceloggerplugin.pro  conferenceloggerplugin.qrc  psiplugin.json  typeaheadfind.cpp  typeaheadfind.h  viewer.cpp  viewer.h
generic/contentdownloaderplugin/: CMakeLists.txt  README  cditemmodel.cpp  cditemmodel.h  changelog.txt  contentdownloader.cpp  contentdownloader.h  contentdownloaderplugin.pro  contentitem.cpp  contentitem.h  form.cpp  form.h  form.ui  iconshot.sh  psiplugin.json  resources.qrc  test.html
generic/enummessagesplugin/: CMakeLists.txt  changelog.txt  defines.h  enummessagesplugin.cpp  enummessagesplugin.h  enummessagesplugin.pro  options.ui  psiplugin.json  resources.qrc
generic/extendedmenuplugin/: CMakeLists.txt  changelog.txt  extendedmenuplugin.cpp  extendedmenuplugin.pro  extendedmenuplugin.qrc  options.ui  psiplugin.json
generic/extendedoptionsplugin/: CMakeLists.txt  changelog.txt  extendedoptionsplugin.cpp  extendedoptionsplugin.pro  psiplugin.json  resources.qrc  syntaxhighlighter.cpp  syntaxhighlighter.h
generic/gmailserviceplugin/: CMakeLists.txt  accountsettings.cpp  accountsettings.h  changelog.txt  common.cpp  common.h  gmailserviceplugin.cpp  gmailserviceplugin.h  gmailserviceplugin.pro  options.ui  viewmaildlg.cpp  viewmaildlg.h  viewmaildlg.ui
generic/gnupgplugin/: CMakeLists.txt  addkeydlg.cpp  addkeydlg.h  addkeydlg.ui  changelog.txt  datewidget.cpp  datewidget.h  gnupg.cpp  gnupg.h  gnupgplugin.pro  gpgprocess.cpp  gpgprocess.h  lineeditwidget.cpp  lineeditwidget.h  model.cpp  model.h  options.cpp  options.h  options.ui  resources.qrc
generic/gomokugameplugin/: CMakeLists.txt  boarddelegate.cpp  boarddelegate.h  boardmodel.cpp  boardmodel.h  boardview.cpp  boardview.h  changelog.txt  common.h  gameelement.cpp  gameelement.h  gamemodel.cpp  gamemodel.h  gamesessions.cpp  gamesessions.h  gomokugameplugin.cpp  gomokugameplugin.h  gomokugameplugin.pro  gomokugameplugin.qrc  invatedialog.cpp  invatedialog.h  invatedialog.ui  invitationdialog.ui  invitedialog.cpp  invitedialog.h  invitedialog.ui  options.cpp  options.h  options.ui  pluginwindow.cpp  pluginwindow.h  pluginwindow.ui  psiplugin.json
unix/: CMakeLists.txt
(+493 files in other folders)
